# sage-graph

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yml  static.yml
src/: error.rs  graph.rs  iterator.rs  lib.rs  macros.rs  util.rs
src/graph/: direction.rs  edge.rs  externals.rs  index.rs  neighbor.rs  node.rs
src/iterator/: format.rs  util.rs
src/macros/: delegate.rs  iterator.rs  template.rs
