[package]
name = "sage-graph"
version = "0.1.5"
authors = ["Victor I. Afolabi <javafolabi@gmail.com>"]
edition = "2018"
description = "Graph representation in Rust."
readme = "README.md"
homepage = "https://github.io/victor-iyi/sage-graph"
repository = "https://github.com/victor-iyi/sage-graph"
license = "MIT or Apache"
keywords = ["graph", "sage-graph", "rust-graph"]
autotests = false
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sage_graph"
path = "src/lib.rs"

[dependencies]
fixedbitset = { version = "0.4", default-features = false }
quickcheck = { version = "1.0", default-features = false, optional = true }
indexmap = { version = "1.6" }
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }

[dev-dependencies]
rand = "0.8.3"
odds = "0.4"
defmac = "0.2"
itertools = { version = "0.10", default-features = false }

[features]
# default = ["graphmap", "stable_graph", "matrix_graph"]
default = []
graphmap = []
serde-1 = ["serde", "serde_derive"]
stable_graph = []
matrix_graph = []

# For unstable features
generate = []
unstable = ["generate"]

# Features flags for testing use only.
all = ["unstable", "quickcheck", "matrix_graph", "stable_graph", "graphmap"]

[package.metadata.docs.rs]
features = ["serde-1", "quickcheck"]

# [project.metadata.release]
# no-dev-version = true
